--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,5 +8,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
-
+    
+    <item
+        android:id="@+id/search_button"
+        android:icon="@drawable/abc_ic_search"
+        android:title="@string/search"
+        android:showAsAction="always"/>
 </menu>
