--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:paddingTop="?android:attr/actionBarSize">
+    >
 
     
 
