Different Devices Commit

--- a/res/layout/activity_display_message.xml
+++ b/res/layout/activity_display_message.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.letscode.DisplayMessageActivity"
+    android:paddingTop="?android:attr/actionBarSize"
     tools:ignore="MergeRootFrame" />
 
