--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" 
     >
-    >
 
     
 
@@ -18,6 +17,13 @@
 
         <requestFocus />
     </EditText>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/counter"
+        android:onClick="counter" />
 
     <Button
         android:id="@+id/button1"
